--- a/apim-agent/apk/helm/templates/log-conf.yaml
+++ b/apim-agent/apk/helm/templates/log-conf.yaml
@@ -31,6 +31,7 @@ data:
     
     [agent]
         mode = "{{ .Values.agent.mode }}"
+        pluginPath = "{{ .Values.agent.pluginPath }}"
   log_config.toml: |
     # The logging configuration for Adapter
 
